--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,7 +19,6 @@ dependencies = [
     "google-cloud-storage>=3.8.0",
     "google-cloud-tasks>=2.21.0",
     "firebase-admin>=6.0.0",
-    "genai>=1.0.3",
     # Database
     "sqlalchemy>=2.0.46",
     "alembic>=1.18.3",
@@ -43,6 +42,11 @@ dependencies = [
     "typer>=0.21.1",
     "uuid6>=2025.0.1",
     "redis>=7.2.0",
+    "dspy>=2.5.26",
+    "schedule>=1.2.2",
+    "cloud-sql-python-connector>=1.20.0",
+    "openai>=1.0.0",
+    "litellm>=1.40.0",
 ]
 
 [dependency-groups]
