feat: implement user feedback mechanism, add "Ask AI" button to figures, and make layout detection threshold configurable.

--- a/inference-service/.env.example
+++ b/inference-service/.env.example
@@ -26,6 +26,7 @@ RATE_LIMIT_TRANSLATE=300/minute
 
 # モデルパス
 LAYOUT_MODEL_PATH=models/layout_m.onnx
+LAYOUT_THRESHOLD=0.5
 LOCAL_MODEL_PATH=models/m2m100_ct2
 # Llama-cpp (LLM) 設定
 LLAMACPP_REPO_ID=byteshape/Qwen3-30B-A3B-Instruct-2507-GGUF
