--- a/inference-service/pyproject.toml
+++ b/inference-service/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "llama-cpp-python>=0.3.16",
     "huggingface-hub>=0.20.0",
+    "dspy-ai>=2.4.9",
 ]
 
 [dependency-groups]
