--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,8 @@
 		"eslint": "^9.14.0",
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
-		"globals": "^15.14.0",
 		"glob": "^8.1.0",
+		"globals": "^15.14.0",
 		"jsdom": "^26.0.0",
 		"postcss": "^8.5.1",
 		"react": "^18.3.1",
@@ -59,6 +59,9 @@
 		"i18next-browser-languagedetector": "^8.2.0",
 		"i18next-http-backend": "^3.0.2",
 		"react-i18next": "^16.5.4",
+		"react-markdown": "^10.1.0",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0",
 		"uuid": "^11.0.5"
 	}
 }
