--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "cloud-sql-python-connector>=1.20.0",
     "openai>=1.0.0",
     "litellm>=1.40.0",
+    "pymupdf4llm>=0.3.4",
 ]
 
 [dependency-groups]
