--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -293,13 +293,18 @@ tasks:
     desc: "Deploy PaperTerrace using Helm"
     cmds:
       - echo "🚀 Deploying with Helm..."
-      - helm upgrade --install paperterrace ./local-files/infrastructure/helm/paperterrace --namespace paperterrace --create-namespace
+      - |
+        HELM_OPTS=""
+        if [ "{{.ENV}}" = "dev" ]; then
+          HELM_OPTS="-f ./local-files/infrastructure/helm/paperterrace/values-dev.yaml"
+        fi
+        helm upgrade --install {{.RELEASE_NAME}} ./local-files/infrastructure/helm/paperterrace --namespace {{.NAMESPACE}} --create-namespace $HELM_OPTS
 
   helm:undeploy:
     desc: "Undeploy PaperTerrace using Helm"
     cmds:
       - echo "🔥 Removing Helm release..."
-      - helm uninstall paperterrace --namespace paperterrace
+      - helm uninstall {{.RELEASE_NAME}} --namespace {{.NAMESPACE}}
 
   helm:lint:
     desc: "Lint Helm chart"
